--- a/public/post.html
+++ b/public/post.html
@@ -371,9 +371,11 @@
 
             #body img {
                 max-width: 100%;
+                max-height: 500px;
                 height: auto;
-                margin: 0.5em 0;
+                margin: 0.5em auto;
                 border-radius: 12px;
+                display: block;
             }
 
             #body table {
